<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_menu_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:gravity="center"
    android:background="@drawable/story_screen_cave">

    <Button
        android:id="@+id/btn_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_purple_rounded"
        android:text="@string/start_game"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="normal"
        android:padding="10dp"/>

    <Button
        android:id="@+id/btn_load"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_purple_rounded"
        android:text="@string/load_game"
        android:textColor="@color/white"
        android:textStyle="normal"
        android:textSize="18sp"
        android:padding="10dp"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/btn_endings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_purple_rounded"
        android:text="@string/view_endings"
        android:textColor="@color/white"
        android:textStyle="normal"
        android:textSize="18sp"
        android:padding="10dp"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/btn_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_purple_rounded"
        android:text="@string/settings"
        android:textColor="@color/white"
        android:textStyle="normal"
        android:textSize="18sp"
        android:padding="10dp"
        android:layout_marginTop="16dp"/>

</LinearLayout>
