<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="24dp"
    android:background="@drawable/basic_background">

    <Button
        android:id="@+id/button_autosave"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:text="@string/auto_save"
        android:enabled="false"
        android:layout_marginTop="32dp"
        android:textColor="@color/white"
        android:background="@drawable/button_purple_rounded"/>

    <Button
        android:id="@+id/button_slot1"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:text="@string/load_slot_empty_default"
        android:layout_marginTop="32dp"
        android:textColor="@color/white"
        android:background="@drawable/button_purple_rounded"/>

    <Button
        android:id="@+id/button_slot2"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/load_slot_empty_default"
        android:textColor="@color/white"
        android:background="@drawable/button_purple_rounded"/>

    <Button
        android:id="@+id/button_slot3"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/load_slot_empty_default"
        android:textColor="@color/white"
        android:background="@drawable/button_purple_rounded"/>

    <Button
        android:id="@+id/home_button"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/home_button"
        android:textColor="@color/white"
        android:background="@drawable/button_purple_rounded"/>


</LinearLayout>
